<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout">

    <TextView
        android:id="@+id/date_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/search_box"
        android:labelFor="@+id/search_box"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:autofillHints="@string/search_box_hint"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <TextView
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_paylist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/fab_insert"
        android:contentDescription="@string/fab_new"
        android:layout_margin="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/fab_filter"
        android:contentDescription="@string/fab_filter"
        android:layout_margin="12dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/fab_stats"
        android:contentDescription="@string/fab_stats"
        android:layout_margin="12dp" />

</LinearLayout>