<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:id="@+id/filter_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <Button
                android:id="@+id/cancel_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/cancel_button"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/round_corners_button"/>

            <Button
                android:id="@+id/filter_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/filter_button"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/round_corners_button"/>

         </LinearLayout>

        <LinearLayout
            android:id="@+id/row_date_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_data"
                android:layout_width="@dimen/img_box_size"
                android:layout_height="@dimen/img_box_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/data_icon"/>

            <EditText
                android:id="@+id/data_start"
                android:labelFor="@+id/data_start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="none"
                android:textColor="@color/fade"
                android:textSize="@dimen/app_text_size"
                android:text="@string/start_date"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_date_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_data_end"
                android:layout_width="@dimen/img_box_size"
                android:layout_height="@dimen/img_box_size"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/data_icon"/>

            <EditText
                android:id="@+id/data_end"
                android:labelFor="@+id/data_start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="none"
                android:textColor="@color/fade"
                android:textSize="@dimen/app_text_size"
                android:text="@string/end_date"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_type"
                android:layout_width="@dimen/img_box_size"
                android:layout_height="@dimen/img_box_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/type_icon"/>

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/img_box_size"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:overlapAnchor="false"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/round_corners_spinner"
                android:popupBackground="@drawable/round_corners_container"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_inout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_inout"
                android:layout_width="@dimen/img_box_size"
                android:layout_height="@dimen/img_box_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/inout_icon"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_box_size"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <RadioButton android:id="@+id/radio_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/incomes"
                    android:textSize="@dimen/app_text_size"/>
                <RadioButton android:id="@+id/radio_outflow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/outflows"
                    android:textSize="@dimen/app_text_size"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_inout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_inout_2"
                android:layout_width="@dimen/img_box_size"
                android:layout_height="@dimen/img_box_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>

            <RadioButton android:id="@+id/radio_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/in_and_out"
                android:textSize="@dimen/app_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_dscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/img_descr"
                android:layout_width="@dimen/img_box_size"
                android:layout_height="@dimen/img_box_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/descr_icon"/>

            <EditText
                android:id="@+id/descr"
                android:labelFor="@+id/descr"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:maxLines="5"
                android:gravity="top|start"
                android:textColor="@color/black"
                android:textSize="@dimen/app_text_size"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scrollbars="vertical"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>